fixed margin issue on mobile for skills section

--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -21,6 +21,14 @@
                 margin-left: 50px;
                 margin-top: 70px;
                 flex-wrap: wrap;
+
+                @include mobile{
+                    margin-left: 20px;  
+                }
+
+                @include iphone8{
+                    margin-left: 20px;  
+                }
         
                 img{
                     width: 65px;
